--- a/clone-youtube/src/Header/css/Header.scss
+++ b/clone-youtube/src/Header/css/Header.scss
@@ -1,11 +1,19 @@
-// :root{
-
-// }
+:root {
+  --color-primary-white: #fff;
+  --color-primary-black: #000;
+  --color-subtle-grey: #fafafa;
+  --color-light-gray: lightgray;
+  --color-normal-grey: gray;
+}
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background-color: var(--color-primary-white);
 }
 
 .header__logo {
@@ -17,6 +25,23 @@
 .header__input {
   display: flex;
   align-items: center;
+  width: 40%;
+  border: 1px solid var(--color-light-gray);
+  > input {
+    flex: 1;
+    border: none;
+  }
+}
+
+.header_icon {
+  margin-right: 7 px;
+}
+
+.header__input__button {
+  width: 50px !important;
+  background-color: var(--color-subtle-grey);
+  border-left: 1px solid var(--color-light-gray);
+  color: var(--color-normal-grey);
 }
 
 .header__icons {
