--- a/clone-youtube/src/RecommendedVideos/css/RecommendedVideos.css
+++ b/clone-youtube/src/RecommendedVideos/css/RecommendedVideos.css
@@ -1,11 +1,14 @@
 :root {
   --color-primary-black: #000;
+  --color-primary-lightgrey: #f9f9f9;
 }
 
 .recommendedVideos {
   -webkit-box-flex: 0.8;
       -ms-flex: 0.8;
           flex: 0.8;
-  border: 1px solid var(--color-primary-black);
+  background-color: var(--color-primary-lightgrey);
+  padding: 40px 20px;
+  padding-bottom: 0;
 }
 /*# sourceMappingURL=RecommendedVideos.css.map */
