--- a/clone-youtube/src/RecommendedVideos/css/RecommendedVideos.scss
+++ b/clone-youtube/src/RecommendedVideos/css/RecommendedVideos.scss
@@ -1,8 +1,11 @@
 :root {
   --color-primary-black: #000;
+  --color-primary-lightgrey: #f9f9f9;
 }
 
 .recommendedVideos {
   flex: 0.8;
-  border: 1px solid var(--color-primary-black);
+  background-color: var(--color-primary-lightgrey);
+  padding: 40px 20px;
+  padding-bottom: 0;
 }
